--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -54,7 +54,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="0.5"
-                        android:gravity="center"
+                        android:gravity="end"
+                        android:layout_marginEnd="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <TextView
