--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,6 @@
 
 
     <color name="primary_black">#C6000000</color>
-    <color name="primary_red">#ab2328</color>
+    <color name="primary_red">#FF4235</color>
     <color name="primary_blue">#00426a</color>
 </resources>
