--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -53,15 +53,16 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity="end"
                         android:layout_weight="0.5"
-                        android:gravity="center"
+                        android:gravity="end"
+                        android:layout_marginEnd="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="@dimen/_20sdp"
                             android:layout_height="@dimen/_20sdp"
-                            android:layout_gravity="center"
+                            android:layout_gravity="end"
                             android:contentDescription="@string/app_name"
                             android:src="@drawable/ic_menu"
                             tools:ignore="MissingConstraints" />
