--- a/app/src/main/res/layout/adapter_grouplist.xml
+++ b/app/src/main/res/layout/adapter_grouplist.xml
@@ -122,8 +122,8 @@
     </LinearLayout>
 
     <View android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/primary_black"
+        android:layout_height="0.5dp"
+        android:background="@color/c_text"
         tools:ignore="MissingConstraints"
         app:layout_constraintTop_toBottomOf="@+id/group_frm"/>
 
